# Benchmarking_iFogSim

./: .~lock.readme.odt#  Systematic_methodology.odt  linux-tools-host_5.15.0-127.137_all.deb  readme.odt
MotionDetection/: pyproject.toml  readme.odt
MotionDetection/Dense_optical_flow/: dof_motion.py  perf_metrics_optical_flow.xlsx
MotionDetection/ML_motion_MODNet/: New_learning_motion_detection.py  learning_motion_detection.py  perf_metrics_deep_learning.xlsx  perf_output.txt
MotionDetection/MOG2_method/: motion_detection_MOG2.py  parse_perf.py  perf_metrics.xlsx  perf_output.txt  run_multiple.sh
MotionDetection/MOG2_method/second_measurment/: motion_detection_metrics.json  (+4 more)
MotionDetection/fast_rcnn_motion/: rigid_motion.py  rigid_motion_objects.csv
MotionDetection/rigid_flow/: rigid_motion.py  rigid_motion_objects.csv
ObjectDetection/: .~lock.readme.odt#  converter_onnx.py  pyproject.toml  readme.odt
ObjectDetection/contour_detection/: contour_obj_detection_DenseFlow.py  contour_obj_detection_ML.py  contour_obj_detection_MOG2.py  parse_perf_contour.py  run_multiple_contour.sh
ObjectDetection/contour_detection_modified/: detections_contour.csv  modified_contour_obj_detection_MOG2.py
ObjectDetection/yolo5n_detection_method/: parse_perf_yolo5n.py  run_multiple_yolo5n.sh  yolo5n_detection.py
ObjectDetection/yolo5s_detection_method/: parse_perf_yolo5s_0.py  run_multiple_yolo5s.sh  test_parse_perf_yolo5s.py  test_run_multiple_yolo5s.sh  yolo5s_detection.py  yolo5s_detection_onnx.py
ObjectDetection/yolo8n_obj_detection/: performance_metrics.csv
ObjectDetection/yolo_obj_detection/: yolov8_obj_detection.py  yolov8_perf_output.txt
(+46 files in other folders)
