[project]
name = "objectdetection"
version = "0.1.0"
description = ""
authors = [
    {name = "saeedehbaneshi",email = "baneshisaeedeh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ultralytics[cpu] (>=8.3.116,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
